--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <h1>Lista de Actividades</h1>
     <ul>
-        <li>Actividad 6</li>
-        <li>Actividad 7</li>
+        <li>Actividad 6:</li>
+        <li>Actividad 7: </li>
+        
     </ul>
 </body>
 </html>
