--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Actividades</title>
+    <link rel="hojaestilo" href="cssprincipal/cssprincipal.css">
+
 </head>
 <body>
     <h1>Lista de Actividades</h1>
     <ul>
-        <li>Actividad 6:</li>
-        <li>Actividad 7: </li>
+        <li><a href="sesion6/indexnikke1.html"></a>Actividad 6</a></li>
+        <li><a href="sesion7/index.html"></a>Actividad 7</a></li>
         
     </ul>
 </body>
