--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Actividades</title>
-    <link rel="hojaestilo" href="cssprincipal/cssprincipal.css">
-
+    <link rel="stylesheet" href="cssprincipal/cssprincipal.css"> 
 </head>
 <body>
     <h1>Lista de Actividades</h1>
     <ul>
-        <li><a href="sesion6/indexnikke1.html"></a>Actividad 6</a></li>
-        <li><a href="sesion7/index.html"></a>Actividad 7</a></li>
-        
+        <li><a href="sesion6/indexnikke1.html">Actividad 6</a></li> 
+        <li><a href="sesion7/index.html">Actividad 7</a></li> 
     </ul>
+    <img src="imagenes/imagen1.jpeg" alt="el pepe" class="imagen-ancho-completo">
+
 </body>
 </html>
+
