cambios 6 , actividad 10 y 5 añadidas

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1>Lista de Actividades</h1>
     <ul>
-        <li><a href="sesion6/indexnikke1.html">Actividad 6</a></li> 
-        <li><a href="sesion7/index.html">Actividad 7</a></li> 
+        <li><a href="sesion5/index.html">Actividad 5 Nike digital sin enlaces y menú </a></li> 
+        <li><a href="sesion6/indexnikke1.html">Actividad 6 Nike digital con enlaces y menú </a></li> 
+        <li><a href="sesion7/index.html">Actividad 7 hackers de El País.</a></li> 
+        <li><a href="sesion10/index.html">Actividad 10 galería de imágenes inicial</a></li> 
     </ul>
     <img src="imagenes/imagen1.jpeg" alt="el pepe" class="imagen-ancho-completo">
 
