cambios 7 , sesion 12 y cambio de imagen

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <li><a href="sesion6/indexnikke1.html">Actividad 6 Nike digital con enlaces y menú </a></li> 
         <li><a href="sesion7/index.html">Actividad 7 hackers de El País.</a></li> 
         <li><a href="sesion10/index.html">Actividad 10 galería de imágenes inicial</a></li> 
+        <li><a href="sesion12/index.html">Actividad 12 posicionamiento fijo, absoluto, relativo</a></li> 
+
     </ul>
     <img src="imagenes/imagen1.jpeg" alt="el pepe" class="imagen-ancho-completo">
 
