cambios 7 , añado Tarea evaluable: galería de imágenes sesion 13 , 14 y 15

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <h1>Lista de Actividades</h1>
-    <ul>
+    <ul class="actividad-lista">
         <li><a href="sesion5/index.html">Actividad 5 Nike digital sin enlaces y menú </a></li> 
         <li><a href="sesion6/indexnikke1.html">Actividad 6 Nike digital con enlaces y menú </a></li> 
         <li><a href="sesion7/index.html">Actividad 7 hackers de El País.</a></li> 
         <li><a href="sesion10/index.html">Actividad 10 galería de imágenes inicial</a></li> 
         <li><a href="sesion12/index.html">Actividad 12 posicionamiento fijo, absoluto, relativo</a></li> 
-
+        <li><a href="sesion 1314 y15/index.html">Actividad 13,14 y 15 Tarea evaluable: galería de imágenes</a></li> 
     </ul>
     <img src="imagenes/imagen1.jpeg" alt="el pepe" class="imagen-ancho-completo">
 
