--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <li><a href="sesion10/index.html">Actividad 10 galería de imágenes inicial</a></li> 
         <li><a href="sesion12/index.html">Actividad 12 posicionamiento fijo, absoluto, relativo</a></li> 
         <li><a href="sesion 1314 y15/index.html">Actividad 13,14 y 15 Tarea evaluable: galería de imágenes</a></li> 
+        <li><a href="sesion 17/index.html">Actividad 17 casting tipográfico</a></li> 
+
     </ul>
     <img src="imagenes/imagen1.jpeg" alt="el pepe" class="imagen-ancho-completo">
 
