--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="sesion 1314 y15/index.html">Actividad 13,14 y 15 Tarea evaluable: galería de imágenes</a></li> 
         <li><a href="sesion 17/index.html">Actividad 17 casting tipográfico</a></li> 
         <li><a href="sesion 21/index.html">Actividad 21 web responsive</a></li> 
+        <li><a href="sesion 22/index.html">Actividad 22 bootstrap</a></li> 
 
     </ul>
     <img src="imagenes/imagen1.jpeg" alt="el pepe" class="imagen-ancho-completo">
